Fix nav spacing

--- a/themes/thecodesigntheme/static/css/scss/_nav.scss
+++ b/themes/thecodesigntheme/static/css/scss/_nav.scss
@@ -1,5 +1,7 @@
 .nav {
   width: 100%;
+  display: flex;
+  justify-content: space-between;
 
   &__item {
     font-size: 0.9375rem;
